--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,40 @@
-.header {
-  background-color: pink;
-  font-family: fantasy;
-  min-height: 100vh;
+* {
+  box-sizing: border-box;
+}
+
+html {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 85%;
   justify-content: center;
-  color: darkslategray;
+  justify-items: center;
+}
+
+select {
+  margin-left: 5%;
+}
+
+header {
+  text-align: center;
+}
+
+img {
+  max-width: 90%;
+}
+
+#li-div {
+  height: 325px;
+  max-width: 20%;
+  float: left;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+li {
+  list-style-type: none;
+  max-height: 100%;
+  max-width: 100%;
+  border: solid 3px black;
+  border-radius: 15px;
+  padding: 5px;
 }
