--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+html {
+  display: flex;
+  width: 85%;
+  justify-content: center;
+  justify-items: center;
+}
+
+select {
+  margin-left: 5%;
+}
+
+header {
+  text-align: center;
+}
+
+img {
+  max-width: 90%;
+}
+
+#li-div {
+  height: 325px;
+  max-width: 20%;
+  float: left;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+li {
+  list-style-type: none;
+  max-height: 100%;
+  max-width: 100%;
+  border: solid 3px black;
+  border-radius: 15px;
+  padding: 5px;
 }
